--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PingPong</name>
 	<properties>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<exec.mainClass>pgv.Main</exec.mainClass>
+		<exec.mainClass>pgv.cliente.MainCliente</exec.mainClass>
 	</properties>
 
 	<dependencies>
